<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="26px"
        android:textColor="@color/lightblue"
        android:text="@string/app_name"
        android:paddingBottom="5px"/>

    <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20px"
            android:paddingTop="10px"
            android:textSize="16px"
            android:textColor="@color/beige"
            android:text="@string/choose_destination"/>

    <ListView android:id="@+id/android:list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/nap_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nap"/>

        <Button
            android:id="@+id/add_destination_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_toRightOf="@id/nap_button"
            android:text="@string/add_destination"/>

	</RelativeLayout>

</LinearLayout>